--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,10 @@
   <head>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, World!;</h1>
   </body>
 </html>
 
-<h1>Hello, user!</h1>
-<h2>this branch - master<h2>
-<h2>this branch - newFitureNumb1<h2>
+<h1>Hello, user!;</h1>
+<h2>this branch - master;<h2>
+<h2>this branch - newFitureNumb1;<h2>
